# foundational-llm-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
llm_from_scratch/: READING_CHECKPOINT_1.md  __init__.py  casual_attention_v1.py  data_processor.py  dataset_v1.py  download_spam_dataset.py  gpt_model.py  instruction_finetune.py  multi_head_attention.py  multi_head_attention_wrapper.py  pretrain.py  self_attention_v1.py  self_attention_v2.py  simple_tokenizer_v1.py  transformer_block.py
tests/: test_simple_tokenizer_v1.py
